# OnEntry

./: .dockerignore  README.md  docker-compose.yml
apps/desktop/: App.xaml  App.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OnEntryDesktop.csproj
apps/desktop/Models/: Models.cs
apps/desktop/Services/: ApiClient.cs
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/api/: client.ts
apps/web/src/components/: Layout.tsx
apps/web/src/pages/: Dashboard.tsx  Generator.tsx  Login.tsx  Search.tsx  Settings.tsx  Vault.tsx
database/migrations/: 01_init.sql
deploy/docker/: nginx.conf
services/api-go/: Dockerfile  go.mod
services/api-go/cmd/api/: main.go
services/api-go/config/: config.go
services/api-go/crypto/: client.go
services/api-go/database/: database.go  repository.go
services/api-go/handlers/: auth.go  crypto.go  generate.go  login.go  me.go  vault.go
services/api-go/middleware/: auth.go  ratelimit.go
services/api-go/models/: models.go  response.go
services/api-go/utils/: utils.go
services/crypto-rust/: Cargo.toml  Dockerfile
services/crypto-rust/src/: crypto.rs  main.rs  password.rs  types.rs
services/utility-zig/: Dockerfile  build.zig
services/utility-zig/src/: api.zig  main.zig  server.zig
shared/proto/: crypto.proto
shared/sdk/: types.ts
